# blurator

./: CMakeLists.txt  LICENSE  README.md  res.qrc
cmake/: compilation.cmake  deps.cmake  java.cmake  mac.cmake  misc.cmake  patchelf.cmake  platform.cmake  python.cmake  target.cmake  testing.cmake  win.cmake
scripts/: copy_deps.py  copyshared.sh  fix_binary.py  makedist.bat  makedist.sh  util.py
src/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  Detector.cpp  Detector.h  Face.cpp  Face.h  FaceDetector.cpp  FaceDetector.h  Global.h  Types.h  Util.cpp  Util.h  Version.h  main.cpp  res.qrc
src/blurator/: CMakeLists.txt  Detector.h  Face.h  FaceDetector.cpp  FaceDetector.h  Util.cpp  Util.h  main.cpp  res.qrc
src/core/: CMakeLists.txt  Util.cpp  Util.h
src/possamp/: CMakeLists.txt  Global.h  ImageWidget.cpp  ImageWidget.h  MainWindow.cpp  MainWindow.h  ObjectManager.cpp  ObjectManager.h  Util.cpp  Util.h  Version.h  main.cpp
src/res/: plates.xml
test/: CMakeLists.txt  Test.cpp  Test.h  TestDetectorValid.cpp  TestFace.cpp  TestFaceDetector.cpp  TestFaceDetectorEmptyImage.cpp  TestFaceDetectorValid.cpp  TestImageConversion.cpp  TestImageConversionAlpha.cpp  TestImageConversionMat.cpp  TestPlateDetectorEmptyImage.cpp  TestRectConversion.cpp
